--- a/SaigeSystemShow/bin/SaigeSystemShow.dll.config
+++ b/SaigeSystemShow/bin/SaigeSystemShow.dll.config
@@ -16,4 +16,11 @@
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.5"/>
   </system.web>
+
+<system.webServer>
+  <staticContent>
+    
+    <mimeMap fileExtension="." mimeType="application/octet-stream"/>
+  </staticContent>
+</system.webServer>
 </configuration>
