--- a/SaigeSystemShow/bin/SaigeSystemShow.dll.config
+++ b/SaigeSystemShow/bin/SaigeSystemShow.dll.config
@@ -19,6 +19,7 @@
   <system.webServer>
     <staticContent>
       <mimeMap fileExtension="." mimeType="application/octet-stream"/>
+      <mimeMap fileExtension=".ini" mimeType="application/octet-stream"/>
     </staticContent>
   </system.webServer>
 </configuration>
