--- a/SaigeSystemShow/SaigeSystemShow.csproj
+++ b/SaigeSystemShow/SaigeSystemShow.csproj
@@ -69,6 +69,64 @@
     <Content Include="chart\LICENSE.md" />
     <Content Include="chart\package.json" />
     <Content Include="chart\README.md" />
+    <Content Include="images\20210525160243497System.Random1" />
+    <Content Include="images\20210525164454251System.Random1" />
+    <Content Include="images\20210525164515315System.Random1" />
+    <Content Include="images\20210525164727506System.Random1" />
+    <Content Include="images\20210525165255672System.Random1" />
+    <Content Include="images\20210525165540871System.Random1" />
+    <Content Include="images\20210525165915241System.Random1" />
+    <Content Include="images\20210525170020969System.Random1" />
+    <Content Include="images\2021052517021427System.Random1" />
+    <Content Include="images\20210525171719356System.Random1" />
+    <Content Include="images\20210525171719356System.Random2" />
+    <Content Include="images\20210525171719356System.Random3" />
+    <Content Include="images\202105251732317320063" />
+    <Content Include="images\202105251732317320662" />
+    <Content Include="images\202105251732317320771" />
+    <Content Include="images\20210525173759450311" />
+    <Content Include="images\20210525173800450243" />
+    <Content Include="images\20210525173800450622" />
+    <Content Include="images\202105251738295240021" />
+    <Content Include="images\202105251738295240102" />
+    <Content Include="images\202105251738295240303" />
+    <Content Include="images\202105252218316700252" />
+    <Content Include="images\202105252218316700531" />
+    <Content Include="images\202105252218316700753" />
+    <Content Include="images\202105252221208370071" />
+    <Content Include="images\20210525222203590541" />
+    <Content Include="images\202105252227532140901" />
+    <Content Include="images\202105252228138200731" />
+    <Content Include="images\202105261128388730511" />
+    <Content Include="images\202105261128388730513" />
+    <Content Include="images\202105261128388730732" />
+    <Content Include="images\2021052611363210591" />
+    <Content Include="images\2021052611363310172" />
+    <Content Include="images\2021052611363310783" />
+    <Content Include="images\202105261137108160203" />
+    <Content Include="images\202105261137108160471" />
+    <Content Include="images\202105261137108160492" />
+    <Content Include="images\202105261137549810032" />
+    <Content Include="images\202105261137549810303" />
+    <Content Include="images\202105261137549810861" />
+    <Content Include="images\202105261151149900841" />
+    <Content Include="images\202105261151149910313" />
+    <Content Include="images\202105261151149910412" />
+    <Content Include="images\202105261152053670331" />
+    <Content Include="images\202105261152053670482" />
+    <Content Include="images\202105261152053670623" />
+    <Content Include="images\202105261428568250952" />
+    <Content Include="images\202105261429205260711" />
+    <Content Include="images\202105261541597560042" />
+    <Content Include="images\202105261541597560461" />
+    <Content Include="images\202105261541597560983" />
+    <Content Include="images\202106021403433230241" />
+    <Content Include="images\202106021403433250422" />
+    <Content Include="images\202106021403433250743" />
+    <Content Include="images\202106071642411940082" />
+    <Content Include="images\202106071642411940681" />
+    <Content Include="images\202106071643223250051" />
+    <Content Include="images\202106071648471310821" />
     <None Include="Properties\PublishProfiles\1212.pubxml" />
     <Content Include="privatefunction.js" />
     <Content Include="NewMain.aspx" />
@@ -79,6 +137,11 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="供配电.ini" />
+    <Content Include="巡检记录.ini" />
+    <Content Include="开发手册.docx" />
+    <Content Include="给排水.ini" />
+    <Content Include="页面总览.ini" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="chart\dist\Chart.bundle.js" />
