--- a/SaigeSystemShow/页面总览.ini
+++ b/SaigeSystemShow/页面总览.ini
@@ -1,13 +1,3 @@
-[总用电量]
-类型=间接数据显示
-父结点=
-数据源=SELECT sum(cost) FROM saigedatabase.elect_device_energy_cost
-单位=电量
-left=20%
-width=30%
-top=30%
-height=30px
-
 [饼形图1]
 类型=饼形图
 父结点=
@@ -21,10 +11,102 @@ height=30px
 数据源3=select value7 from shebeitable where shebeiname=\"发电机组参数\"
 颜色3=green
 标题3=绿
-left=10%
+left=150%
 width=10%
 top=20%
 height=20%
+
+[设备数量]
+类型=边框1
+父结点=
+left=5%
+width=20%
+top=3%
+height=30%
+
+[设备总数量标题]
+类型=文本
+父结点=设备数量
+文本=设备总数量
+left=10%
+width=50%
+top=25%
+height=30px
+
+[设备总数量]
+类型=间接数据显示
+父结点=设备数量
+数据源=SELECT count(*) FROM saigedatabase.shebeitable
+单位=台
+left=50%
+width=30%
+top=25%
+height=30px
+
+[在线设备总数标题]
+类型=文本
+父结点=设备数量
+文本=在线设备数
+left=10%
+width=50%
+top=50%
+height=30px
+
+
+[设备在线总数量]
+类型=间接数据显示
+父结点=设备数量
+数据源=SELECT count(*) FROM saigedatabase.shebeitable where TIME_TO_SEC( TIMEDIFF(now(),value10))<600
+单位=台
+left=50%
+width=30%
+top=50%
+height=30px
+
+[最近巡检记录]
+类型=边框1
+父结点=
+left=35%
+width=60%
+top=3%
+height=90%
+
+[最近巡检表格]
+类型=表格
+父结点=最近巡检记录
+列数=8
+列1名称=时间
+列1类型=文字
+列1width=120
+列2名称=设备
+列2类型=文字
+列2width=120
+列3名称=信息
+列3类型=文字
+列3width=120
+列4名称=类型
+列4类型=文字
+列4width=120
+列5名称=操作员
+列5类型=文字
+列5width=120
+列6名称=图片1
+列6类型=图片
+列6width=240
+列7名称=图片2
+列7类型=图片
+列7width=240
+列8名称=图片3
+列8类型=图片
+列8width=240
+row_height=80
+数据源=SELECT  savetime,device,info,type,user,pic,pic2,pic3 FROM saigedatabase.search_info_table limit 60
+width=80%
+left=15%
+top=20%
+height=75%
+
+
 
 [实时更新]
 update=false
