--- a/SaigeSystemShow/页面总览.ini
+++ b/SaigeSystemShow/页面总览.ini
@@ -32,6 +32,31 @@ width=20%
 top=67%
 height=30%
 
+[视频监控1]
+类型=边框1
+父结点=
+left=27%
+width=20%
+top=3%
+height=30%
+
+[视频监控2]
+类型=边框1
+父结点=
+left=27%
+width=20%
+top=35%
+height=30%
+
+[视频监控3]
+类型=边框1
+父结点=
+left=27%
+width=20%
+top=67%
+height=30%
+
+
 [饼形图1]
 类型=饼形图
 父结点=设备类型占比
