--- a/SaigeSystemShow/页面总览.ini
+++ b/SaigeSystemShow/页面总览.ini
@@ -183,12 +183,19 @@ height=30px
 [最近30天耗能曲线]
 类型=单曲线
 父结点=
-数据源=SELECT datetime,sum(cost) FROM saigedatabase.elect_device_energy_cost group by datetime order by datetime desc limit 30
+数据源=SELECT savetime,value FROM saigedatabase.history_save where value_id=\"参数种类20210409223525\" limit 30
 left=50%
 width=45%
 top=15%
 height=20%
 
 
+
+
 [实时更新]
 update=false
+
+
+
+
+
